applied backend changes to l1

--- a/leaderboard_1.0/jobs/submission.yaml
+++ b/leaderboard_1.0/jobs/submission.yaml
@@ -3,7 +3,7 @@ kind: Job
 metadata:
   name.$: $.submission.name
 spec:
-  backoffLimit: 2
+  backoffLimit: 4
   template:
     spec:
       serviceAccountName: submission-worker
@@ -21,28 +21,35 @@ spec:
               cp -r ${CARLA_PYTHON_API_ROOT}/* /tmp/CARLA/
               cp -r ${GPU_UTILS_ROOT}/* /tmp/gpu_utils
 
-              if [ -z $RESUME ]; then
-                echo "Detected a normal run, creating log files"
-                mkdir -m 0777 -p /tmp/logs/agent
-                mkdir -m 0777 -p /tmp/logs/simulator
-                mkdir -m 0777 -p /tmp/logs/uploader
-                mkdir -m 0777 -p /tmp/logs/containers-status
-              else
-                echo "Detected a resume, download log files from S3, and removing the container status data"
-                #Descargar solo el merge results.json y ponerlo en /tmp/logs/agent?
-                # Q hacer con los agent1/leaderboard.log ....
-                aws s3 sync s3://${S3_BUCKET}/${SUBMISSION_ID}/agent/results.json /tmp/logs/agent/results.json
-                aws s3 rm s3://${S3_BUCKET}/${SUBMISSION_ID}/containers-status --recursive
+              echo "Creating log files"
+              mkdir -m 0777 -p /tmp/logs/logs
+              mkdir -m 0777 -p /tmp/logs/containers-status
+              mkdir -m 0777 -p /tmp/logs/agent
+              mkdir -m 0777 -p /tmp/logs/recorder
+              mkdir -m 0777 -p /tmp/logs/evalai
+
+              echo "Downloading existent files from S3, and removing the container status data"
+              aws s3 rm s3://${S3_BUCKET}/${SUBMISSION_ID}/containers-status --recursive --exclude "*" --include "*-${WORKER_ID}.*"
+              aws s3 cp s3://${S3_BUCKET}/${SUBMISSION_ID}/agent /tmp/logs/agent --recursive --exclude "*" --include "*${WORKER_ID}.json"
+              aws s3 cp s3://${S3_BUCKET}/${SUBMISSION_ID}/logs /tmp/logs/logs --recursive --exclude "*" --include "*-${WORKER_ID}.log"
+
+              chmod 0777 -R /tmp/logs
+
+              if [ ! -z $RESUME ]; then
+                echo "Detected a resume initiated by the user."
+                aws s3 rm s3://${S3_BUCKET}/${SUBMISSION_ID}/containers-status --recursive --exclude "*" --include "simulation.cancel"
               fi
 
               bash /tmp/gpu_utils/get_gpu_uuid.sh > /tmp/gpu_utils/gpu.txt
           env:
             - name: SUBMISSION_ID
               value.$: $.submission.submission_id
-            - name: RESUME
-              value.$: $.submission.resume
+            - name: WORKER_ID
+              value.$: $.parallelization.worker_id
             - name: S3_BUCKET
               value.$: "$.aws.s3_bucket"
+            - name: RESUME
+              value.$: $.submission.resume
           volumeMounts:
             - mountPath: /tmp/leaderboard
               name: leaderboard
@@ -73,9 +80,12 @@ spec:
           volumeMounts:
             - mountPath: /gpu
               name: gpu-utils
-            - mountPath: /home/carla/CarlaUE4/Saved
+            - mountPath: /tmp/logs
               name: logs
-              subPath: simulator
+              subPath: logs
+            - mountPath: /home/carla/recorder
+              name: logs
+              subPath: recorder
             - mountPath: /tmp/status
               name: logs
               subPath: containers-status
@@ -94,6 +104,10 @@ spec:
               value.$: $.submission.track_codename
             - name: ROUTES_SUBSET
               value.$: $.submission.subset
+            - name: ROUTES
+              value: /workspace/leaderboard/data/routes_testing.xml
+            - name: SCENARIOS
+              value: /workspace/leaderboard/data/all_towns_traffic_scenarios_private.json
             - name: REPETITIONS
               value: "5"
             - name: RESUME
@@ -107,6 +121,9 @@ spec:
               name: carla-python-api
             - mountPath: /gpu
               name: gpu-utils
+            - mountPath: /tmp/logs
+              name: logs
+              subPath: logs
             - mountPath: /tmp/agent
               name: logs
               subPath: agent
