--- a/leaderboard_1.0/jobs/monitor.yaml
+++ b/leaderboard_1.0/jobs/monitor.yaml
@@ -3,7 +3,7 @@ kind: Job
 metadata:
   name.$: $.submission.name
 spec:
-  backoffLimit: 8
+  backoffLimit: 4
   template:
     spec:
       serviceAccountName: submission-worker
@@ -19,11 +19,36 @@ spec:
               cp -r ${LEADERBOARD_ROOT}/* /tmp/leaderboard/
               cp -r ${SCENARIO_RUNNER_ROOT}/* /tmp/scenario_runner/
 
+              echo "Creating log files"
+              mkdir -m 0777 -p /tmp/logs/logs
+              mkdir -m 0777 -p /tmp/logs/containers-status
+              mkdir -m 0777 -p /tmp/logs/agent
+              mkdir -m 0777 -p /tmp/logs/evalai
+
+              echo "Downloading existent files from S3, and removing the container status data"
+              aws s3 rm s3://${S3_BUCKET}/${SUBMISSION_ID}/containers-status --recursive --exclude "*" --include "monitor.*"
+              aws s3 cp s3://${S3_BUCKET}/${SUBMISSION_ID}/logs /tmp/logs/logs --recursive --exclude "*" --include "monitor.log"
+
+              chmod 0777 -R /tmp/logs
+
+              if [ ! -z $RESUME ]; then
+                echo "Detected a resume initiated by the user. Removing simulation cancel file if needed."
+                aws s3 rm s3://${S3_BUCKET}/${SUBMISSION_ID}/containers-status --recursive --exclude "*" --include "simulation.cancel"
+              fi
+          env:
+            - name: SUBMISSION_ID
+              value.$: $.submission.submission_id
+            - name: S3_BUCKET
+              value.$: "$.aws.s3_bucket"
+            - name: RESUME
+              value.$: $.submission.resume
           volumeMounts:
             - mountPath: /tmp/leaderboard
               name: leaderboard
             - mountPath: /tmp/scenario_runner
               name: scenario-runner
+            - mountPath: /tmp/logs
+              name: logs
 
       containers:
         - name: monitor
@@ -56,9 +81,14 @@ spec:
               name: leaderboard
             - mountPath: /utils/scenario_runner
               name: scenario-runner
+            - mountPath: /logs
+              name: logs
       restartPolicy: OnFailure
       volumes:
         - name: leaderboard
           emptyDir: {}
         - name: scenario-runner
           emptyDir: {}
+        - name: logs
+          emptyDir: {}
+
